--- a/config/system.config.properties
+++ b/config/system.config.properties
@@ -1,4 +1,4 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/earl_test
+url=jdbc:mysql://127.0.0.7:3306/earl_test
 username=root
 password=
