--- a/config/system.config.properties
+++ b/config/system.config.properties
@@ -1,4 +1,6 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/earl_test
+url=jdbc:mysql://127.0.0.1:3306/test
 username=root
 password=
+
+database.connect.timeout=30
