修改数据库host以及数据库连接超时时间

--- a/config/system.config.properties
+++ b/config/system.config.properties
@@ -1,6 +1,6 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/earl_test
+url=jdbc:mysql://10.177.121.190:3306/product
 username=root
 password=
 
-database.connect.timeout=30
+database.connect.timeout=60
